add pokemon api

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <ul>
       <li><a href="pokemon.html">HTTP-запросы и Fetch API</a></li>
-      <li><a href="02-cors.html">Cross-Origin Resource Sharing</a></li>
+      <li><a href="#">Cross-Origin Resource Sharing</a></li>
     </ul>
 
 
