--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок страницы</title>
     <link
@@ -15,7 +15,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <ul>
       <li><a href="pokemon.html">HTTP-запросы и Fetch API</a></li>
-      <li><a href="#">Cross-Origin Resource Sharing</a></li>
+      <li><a href="rest.html">Пагинация с REST API</a></li>
     </ul>
 
 
